--- a/index1.html
+++ b/index1.html
@@ -12,10 +12,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
-
 <body>
 
   <!--herder-->
+    <div>
+    <div>
+    <div>
+      <div>
+    <div>
+    <div>
     <div>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -40,6 +45,7 @@
                   <li><a class="dropdown-item" href="#">Another action</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
                 </ul>
               </li>
               <li class="nav-item">
@@ -69,11 +75,11 @@
               <p><i class="fas fa-envelope"></i>  venchantha@gmail.com</p>
             </div>
             <div class="icon-img">
-               <img src="/youtube.png" alt="">
-               <img src="/skype.png" alt="">
-               <img src="/facebook.png" alt="">
-               <img src="/ig.png" alt="">
-               <img src="/twitter.png" alt="">
+               <a href=""><img src="/youtube.png" alt=""></a>
+                <a href=""><img src="/skype.png" alt=""></a>
+               <a href=""><img src="/facebook.png" alt=""></a>
+               <a href=""><img src="/ig.png" alt=""></a>
+               <a href=""> <img src="/twitter.png" alt=""></a>
             </div>
           </div>
           <div class="col-6">
@@ -81,6 +87,63 @@
               <div class="img-box ">
                 <img src="/Mr.png" alt="profile-pic"  class="img-thumbnail">
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--About Me-->
+    <section id="about-me">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <img src="/Dev.png" class="img-thumbnail" width="60%">
+          </div>
+          <div class="col-6 text-right">
+            <h3>About Me</h3>
+            <p><span class="badge bg-warning text-dark">Welcome to your personal</span> dashboard, where you can find an introduction to how<span class="badge bg-success"> GitHub</span> works, 
+              tools to help you build software, and help merging your first lines of code.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!---->
+
+    <section class="education">
+      <div class="container">
+        <h2>Education</h2>
+      </div>
+    </section>
+
+    <!---->
+    <br>
+    <section>
+      <div id="contact">
+        <div class="container">
+          <div class="row">
+            <div class="col-6">
+              <div class="row mb-3">
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                </div>
+                <div class="col">
+                  <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+                </div>
+              </div>
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Email" aria-label="Email">
+              </div>
+              <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Address" aria-label="Email">
+              </div>
+              <div class="form-floating">
+                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"></textarea>
+                <label for="floatingTextarea2">Comments</label>
+              </div>
+            </div>
+            <div class="col-6">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3908.7734607944312!2d104.89254281420995!3d11.568091347246117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31095173761d4a53%3A0xcd09ff2f4d326e3f!2sSETEC%20Institute!5e0!3m2!1sen!2skh!4v1656118963428!5m2!1sen!2skh" width="500" height="360" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"  text-align="center"></iframe>
             </div>
           </div>
         </div>
